Mon Feb 28 07:21:14 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/performance-tests/RTEvent/RTCORBA_Baseline/RTCORBA_Baseline.mpc:
	* orbsvcs/performance-tests/RTEvent/RTCORBA_Callback/RTCORBA_Callback.mpc:
	  Reverted:
	  Fri Feb 25 21:58:39 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	  MPC's custom_only feature does not work with VC71.

	* orbsvcs/performance-tests/LoadBalancing/LBPerf/RPS/LoadBalancing.mpc:
	* orbsvcs/orbsvcs/CosNaming.mpc:
	* orbsvcs/orbsvcs/CosTrading.mpc:
	* orbsvcs/orbsvcs/DsLogAdmin.mpc:

	  Reverted:
	  Fri Feb 25 07:00:19 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	  MPC's custom_only feature does not work with VC71.

Mon Feb 28 14:43:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/ORB_Constants.h:
          Added ifndef ACE_LACKS_DEPRECATED_MACROS around the deprecated
          macros. This is used in a test build to check if these deprecated
          macros aren't used anymore and prevent new usage

Mon Feb 28 14:15:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/IDL_Test/main.cpp:
          Specify access control to get rid of Tru64 warning

Mon Feb 28 07:58:58 2005  Ciju John  <john_c@ociweb.com>

        * tao/IIOP_Acceptor.cpp:
        * tao/IIOP_Acceptor.h:
        * orbsvcs/orbsvcs/SSLIOP/IIOP_SSL_Acceptor.h:
        * orbsvcs/orbsvcs/SSLIOP/IIOP_SSL_Acceptor.cpp:
          Refactored the parse_options method bringing common code to the
          base class. In the future this work needs to be taken a
          higher level with common code moved to TAO_Acceptor class. This
          will affect all pluggable protocols, but saves from
          code-duplication.

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Acceptor.cpp:
        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Acceptor.h:
          Added portspan capability to SSLIOP.

        * orbsvcs/orbsvcs/SSLIOP/SSLIOP_Connection_Handler.cpp:
          Set option SSL_MODE_ACCEPT_MOVING_WRITE_BUFFER during